--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,23 +1,52 @@
 name: Cypress API tests
 
-on: workflow_dispatch
+on: 
+  workflow_dispatch
 
 jobs:
 
-  cypress-tests:
-    runs-on: ubuntu-latest 
+  cypress-api:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Setup Node.js        
+      - name: Slack - Início dos testes
+        uses: rtCamp/action-slack-notify@v2.2.0
+        if: always()
+        env:
+          SLACK_CHANNEL: notification-tests
+          SLACK_USERNAME: qas
+          SLACK_COLOR: '#1e81b0'
+          MSG_MINIMAL: event,actions url
+          SLACK_TITLE: 'Iniciando a execução dos testes de API:'
+          SLACK_MESSAGE: ':loading_slack:'
+          SLACK_FOOTER: Powered By Serverest
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Checkout code        
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install dependencies 
+      - name: Install dependencies
         run: npm install
 
-      - name: Run Cypress API tests  
-        run: npx cypress run --spec "cypress/api/*.cy.js"
+      - name: Run Cypress API tests
+        run: npx cypress run --spec "cypress/api/*.cy.js" --record
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+
+      - name: Slack - Resultado dos testes
+        uses: rtCamp/action-slack-notify@v2.2.0
+        if: always()
+        env:
+          SLACK_CHANNEL: notification-tests
+          SLACK_USERNAME: qas
+          SLACK_COLOR: ${{ job.status }}
+          MSG_MINIMAL: event,actions url
+          SLACK_TITLE: 'Resultados dos testes de API:'
+          SLACK_MESSAGE: ':cypress:'
+          SLACK_FOOTER: Powered By Serverest
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
