--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -25,7 +25,7 @@ jobs:
           SLACK_COLOR: '#1e81b0'
           MSG_MINIMAL: event,actions url
           SLACK_TITLE: 'Iniciando a execução dos tests: ' 
-          SLACK_MESSAGE: ':loading_slack:'
+          SLACK_MESSAGE: ':olhos:'
           SLACK_FOOTER: Powered By Serverest
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
 
@@ -49,7 +49,7 @@ jobs:
           SLACK_COLOR: ${{ job.status }}
           MSG_MINIMAL: event,actions url
           SLACK_TITLE: 'Resultados dos tests: ' 
-          SLACK_MESSAGE: ':loading_slack:'
+          SLACK_MESSAGE: ':foguete:'
           SLACK_FOOTER: Powered By Serverest
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         
